# GNS-AIP

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  sprint0.sh
.github/workflows/: ci.yml  deploy-docs.yml  publish.yml
docs/: package-lock.json  package.json
docs/docs/: index.md
docs/docs/.vitepress/: config.mts
docs/docs/.vitepress/theme/: custom.css
docs/docs/api/: breadcrumbs.md  compliance.md  delegate.md  index.md  manifest.md  provision.md
docs/docs/concepts/: compliance-tiers.md  delegation.md  identity.md  proof-of-trajectory.md  territorial-binding.md  three-layer-provenance.md
docs/docs/es/: index.md
docs/docs/es/api/: breadcrumbs.md  compliance.md  delegate.md  index.md  manifest.md  provision.md
docs/docs/es/concepts/: compliance-tiers.md  delegation.md  identity.md  proof-of-trajectory.md  territorial-binding.md  three-layer-provenance.md
docs/docs/es/guide/: architecture.md  breadcrumbs.md  compliance.md  delegation.md  provisioning.md  quickstart.md  what-is-gns-aip.md
docs/docs/es/integrations/autogen/: index.md
docs/docs/es/integrations/crewai/: index.md
docs/docs/es/integrations/langchain/: index.md
docs/docs/es/integrations/openai/: index.md
docs/docs/es/integrations/vercel/: index.md
docs/docs/es/sdk/python/: client.md  index.md  install.md  models.md
docs/docs/es/sdk/typescript/: client.md  index.md  install.md  types.md
docs/docs/guide/: architecture.md  breadcrumbs.md  compliance.md  delegation.md  provisioning.md  quickstart.md  what-is-gns-aip.md
docs/docs/integrations/autogen/: index.md
docs/docs/integrations/crewai/: index.md
docs/docs/integrations/langchain/: index.md
docs/docs/integrations/openai/: index.md
docs/docs/integrations/vercel/: index.md
docs/docs/it/: index.md
docs/docs/it/api/: breadcrumbs.md  compliance.md  delegate.md  index.md  manifest.md  provision.md
docs/docs/it/concepts/: compliance-tiers.md  delegation.md  identity.md  proof-of-trajectory.md  territorial-binding.md  three-layer-provenance.md
docs/docs/it/guide/: architecture.md  breadcrumbs.md  compliance.md  delegation.md  provisioning.md  quickstart.md  what-is-gns-aip.md
docs/docs/it/integrations/autogen/: index.md
docs/docs/it/integrations/crewai/: index.md
docs/docs/it/integrations/langchain/: index.md
docs/docs/it/integrations/openai/: index.md
docs/docs/it/integrations/vercel/: index.md
docs/docs/it/sdk/python/: client.md  index.md  install.md  models.md
docs/docs/it/sdk/typescript/: client.md  index.md  install.md  types.md
docs/docs/public/: CNAME
docs/docs/sdk/python/: client.md  index.md  install.md  models.md
docs/docs/sdk/typescript/: client.md  index.md  install.md  types.md
python/autogen-gns-aip/: README.md  pyproject.toml
python/autogen-gns-aip/autogen_gns_aip/: __init__.py  core.py
python/autogen-gns-aip/tests/: test_core.py
python/crewai-gns-aip/: README.md  pyproject.toml
python/crewai-gns-aip/crewai_gns_aip/: __init__.py  core.py
python/crewai-gns-aip/tests/: test_core.py
python/gns-aip/: README.md  pyproject.toml
python/gns-aip/gns_aip/: __init__.py  models.py  sdk.py
python/gns-aip/tests/: conftest.py  test_chain.py  test_models.py  test_sdk.py
workers/gateway/: gns-worker.ts  wrangler.toml
