[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autogen-gns-aip"
version = "0.1.0"
description = "GNS-AIP identity and compliance for AutoGen/AG2 agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "GNS Foundation", email = "dev@gnsfoundation.org" }]
keywords = [
  "autogen", "ag2", "gns", "aip", "agent-identity", "compliance",
  "delegation", "proof-of-trajectory", "eu-ai-act", "multi-agent",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "gns-aip>=0.1.0",
]

[project.optional-dependencies]
autogen = ["ag2>=0.4.0"]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21",
]

[project.urls]
Repository = "https://github.com/GNS-Foundation/GNS-AIP"

[tool.hatch.build.targets.wheel]
packages = ["autogen_gns_aip"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
