[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crewai-gns-aip"
version = "0.1.0"
description = "GNS-AIP identity and compliance for CrewAI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "GNS Foundation", email = "dev@gnsfoundation.org" }]
keywords = [
  "crewai", "gns", "aip", "agent-identity", "compliance",
  "delegation", "proof-of-trajectory", "eu-ai-act", "multi-agent",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "gns-aip>=0.1.0",
  "crewai>=0.80.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21",
]

[project.urls]
Repository = "https://github.com/GNS-Foundation/GNS-AIP"

[tool.hatch.build.targets.wheel]
packages = ["crewai_gns_aip"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
